# composy

./: .gitignore  LICENSE  README.MD  pyproject.toml  requirements.txt
composy/: __init__.py  compos.py  compos_api.py  compos_app.py  compos_definition.py  compos_member.py  error_handle.py  member.py  member_definition.py  result_dataclasses.py  result_enums.py
composy/file_definition/: beam_section_at_x.py  beam_span_length.py  beam_steel_material_std.py  beam_steel_material_user.py  beam_user_section.py  beam_welding_material.py  compos_file_version.py  criteria_beam_size_limit.py  criteria_def_limit.py  criteria_frequency.py  criteria_optimise_option.py  criteria_section_type.py  decking_catalogue.py  decking_user.py  design_option.py  ec_design_option.py  ec_load_comb_factors.py  end_flange_free_rotate.py  final_end_flange_free_rotate.py  final_restraint_no_stud.py  final_restraint_point.py  final_restraint_secondary_beam.py  floor_response.py  group.py  load.py  member_title.py  rebar_longitudinal.py  rebar_material.py  rebar_mesh.py  rebar_transverse.py  restraint_point.py  restraint_secondary_beam.py  restraint_top_flange.py  safety_factor_load.py  safety_factor_material.py  slab_concrete _material.py  slab_concrete_material.py  slab_dimension.py  stud_definition.py  stud_ec_apply.py  (+8 more)
src/composy/: __init__.py  compos_api.py  compos_app.py  compos_definition.py  compos_member.py  error_handle.py  member_definition.py  result_dataclasses.py  (+1 more)
stub/: Compos_8_6.py
tests/: __init__.py  compos_sample.py  context.py  test_basic.py  test_compos_file.py
(+47 files in other folders)
